bugfix: remove grey colour from suffix due a11y contrast issue

--- a/front-end-components/src/index.css
+++ b/front-end-components/src/index.css
@@ -230,7 +230,6 @@
   .chart-stat-wrapper
   .chart-stat-value
   .chart-stat-value-suffix {
-  color: var(--label-colour);
   margin-left: 5px;
   font-size: 0.38em;
 }
